--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&family=Dosis:wght@200&family=Explora&family=Great+Vibes&family=Handlee&family=Moon+Dance&family=Parisienne&family=Pinyon+Script&family=Playfair+Display&family=Shadows+Into+Light&family=Shadows+Into+Light+Two&display=swap');
+.h1{
+    color: black;
+    font-family: 'Playfair Display', serif;
+    transition: 1s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.h1:hover{
+    color: white;
+    scale: 1.5;
+
+}
+button:hover{
+    border-radius: 35px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
